# 12345

./: .gitignore  Dockerfile  Dockerfile.sandbox  README.md  ghost.py  ghost.py.bak2  ghost_brain.py  ghostcoach.zsh  pyproject.toml  secrets.yml  security_rules.py  test_rules.py
.ghostcmd/: last_run.json
.github/workflows/: ci.yml  ci_docker.yml  ci_go.yml  ci_java.yml  ci_node.yml  ci_node.yml.bak  ci_python.yml  ci_python.yml.bak  ci_rust.yml
config/: limits.yml
core/: ci_ai.py  ci_github.py  ci_init.py  ci_manage.py  config.py  exec_limits.py  executor.py  ghost_logging.py  history.py  limits.py  workflow.py  workflow_edit.py  workflow_lint.py  yaml_edit.py
core/templates/: ci_docker.yml  ci_dotnet.yml  ci_generic.yml  ci_go.yml  ci_java.yml  ci_node.yml  ci_python.yml  ci_rust.yml  gha_android.yml  gha_docker.yml  gha_dotnet.yml  gha_go.yml  gha_java.yml  gha_multi.yml  gha_node.yml  gha_php.yml  gha_python.yml  gha_ruby.yml  gha_rust.yml
flows/: ci_release.yml  hello.yml  hello_v2.yml  mask_cwd_check.yml  quick_check.yml  ssh_smoke.yml
ghostcmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ghostcoach/: __init__.py  daemon.py  ui.html
ghostoverlay/: cli.py  index.html  main.js  package-lock.json  package.json  start.js
